--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "server",
-  "version": "0.0.1",
-  "description": "Introduction to node",
-  "main": "index.js",
+  "name": "20",
+  "version": "1.0.0",
+  "description": "image uploading",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-  "keywords": [
-    "server"
-  ],
-  "author": "Ammar Yasser",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "crypto": "^1.0.1",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "joi": "^14.3.1",
-    "nodemon": "^1.18.10",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "uuid": "^3.3.2"
   }
 }
