--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "joi": "^14.3.1",
+    "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "uuid": "^3.3.2"
