updated confirmation massege and gallery

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}\\index2.js"
+            "program": "${workspaceFolder}\\index.js"
         }
     ]
 }
