--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "20",
   "version": "1.0.0",
   "description": "image uploading",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node index",
+    "dev": "nodemon index",
+    "test": "node index.js",
+    "st": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +18,11 @@
     "express": "^4.16.4",
     "joi": "^14.3.1",
     "morgan": "^1.9.1",
+    "mongoose": "^5.4.15",
     "multer": "^1.4.1",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
