--- a/package.json
+++ b/package.json
@@ -1,23 +1,51 @@
-{
-  "name": "20",
-  "version": "1.0.0",
-  "description": "image uploading",
-  "main": "app.js",
-  "scripts": {
-    "start": "node app.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
-    "crypto": "^1.0.1",
-    "ejs": "^2.6.1",
-    "express": "^4.16.4",
-    "joi": "^14.3.1",
-    "mongoose": "^5.4.20",
-    "morgan": "^1.9.1",
-    "multer": "^1.4.1",
-    "uuid": "^3.3.2"
+
+  {
+    "name": "Namla",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "dependencies": {
+      "@types/jest": "^24.0.11",
+      "axios": "^0.18.0",
+      "express": "^4.16.4",
+      "jest-cli": "^24.5.0",
+      "jest": "^24.5.0",
+      "joi": "^14.3.1",
+      "mon": "0.0.8",
+      "mongoose": "^5.4.20",
+      "node": "^11.12.0",
+      "stripe": "^6.28.0",
+      "uuid": "^3.3.2"
+    },
+    "devDependencies": {
+      "babel-preset-env": "^1.6.1",
+      "jest": "^24.5.0",
+      "nodemon": "^1.18.10",
+      "standard": "^12.0.1"
+    },
+    "scripts": {
+      "start": "node index.js",
+      "test": "jest --runInBand",
+      "testWatch": "jest --runInBand --watchAll"
+    },
+    "repository": {
+      "type": "git",
+      "url": "git+https://github.com/SE-GUC/Namla.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+      "url": "https://github.com/SE-GUC/Namla/issues"
+    },
+    "homepage": "https://github.com/SE-GUC/Namla#readme",
+    "standard": {
+      "env": [
+        "jest"
+      ]
+    },
+    "jest": {
+      "testEnvironment": "node",
+      "verbose": true,
+      "collectCoverage": true
+    }
   }
-}
