--- a/package.json
+++ b/package.json
@@ -1,21 +1,44 @@
 {
-  "name": "20",
+  "name": "namla",
   "version": "1.0.0",
-  "description": "image uploading",
-  "main": "app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "jest"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "crypto": "^1.0.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "@types/jest": "^24.0.11",
+    "axios": "^0.18.0",
     "joi": "^14.3.1",
-    "morgan": "^1.9.1",
+    "jsonwebtoken": "^8.5.0",
+    "jtest": "0.0.1",
+    "moment": "^2.24.0",
+    "mongoose": "^5.4.15",
     "multer": "^1.4.1",
-    "uuid": "^3.3.2"
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
+  },
+  "devDependencies": {
+    "jest": "^24.5.0",
+    "nodemon": "^1.18.10"
+  },
+  "standard": {
+    "env": [
+      "jest"
+    ]
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "verbose": true,
+    "collectCoverage": true
   }
 }
