--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "description": "image uploading",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "jest": "^24.5.0",
     "joi": "^14.3.1",
     "mongoose": "^5.4.20",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "passport": "^0.4.0",
     "uuid": "^3.3.2"
   }
 }
