--- a/package.json
+++ b/package.json
@@ -54,11 +54,17 @@
 
     "node-fetch": "^2.3.0",
     "uuid": "^3.3.2"
-
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "jest": "^24.5.0",
     "joi": "^14.3.1",
+
+    "jtest": "0.0.1",
+    "mongoose": "^5.4.20",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "node-fetch": "^2.3.0",
+    "uuid": "^3.3.2"
     "jsonwebtoken": "^8.5.0",
     "moment": "^2.24.0",
     "mongoose": "^5.4.15",
