--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-
   "name": "express-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index",
-    "test": "jest"
+    "start": "node server",
+   "test": "jest",
+    "client-install": "npm install --prefix client",
+   "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/jest": "^24.0.11",
- 
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
-
     "cors": "^2.8.5",
-   "@types/jest": "^24.0.11",
-    "axios": "^0.18.0",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
-     "moment": "^2.24.0",
+    "moment": "^2.24.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0"
   },
@@ -30,55 +29,6 @@
     "jest": "^24.5.0",
     "nodemon": "^1.18.10"
   },
-  "standard": {
-    "env": [
-      "jest"
-    ]
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "verbose": true,
-    "collectCoverage": true
-
-    "body-parser": "^1.18.3",
-    "crypto": "^1.0.1",
-    "ejs": "^2.6.1",
-    "express": "^4.16.4",
-    "jest": "^24.5.0",
-    "jest-cli": "^24.5.0",
-    "joi": "^14.3.1",
-    "mon": "0.0.8",
-
-    "jtest": "0.0.1",
-    "mongoose": "^5.4.20",
-    "multer": "^1.4.1",
-    "node": "^11.12.0",
-    "stripe": "^6.28.0",
-
-    "node-fetch": "^2.3.0",
-    "uuid": "^3.3.2"
-  },
-  "devDependencies": {
-    "babel-preset-env": "^1.6.1",
-    "jest": "^24.5.0",
-    "nodemon": "^1.18.10",
-    "standard": "^12.0.1"
-  },
-  "scripts": {
-    "start": "node index.js",
-    "test": "jest --runInBand",
-    "testWatch": "jest --runInBand --watchAll"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SE-GUC/Namla.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/SE-GUC/Namla/issues"
-  },
-  "homepage": "https://github.com/SE-GUC/Namla#readme",
   "standard": {
     "env": [
       "jest"
@@ -92,21 +42,23 @@
     "express": "^4.16.4",
     "jest": "^24.5.0",
     "joi": "^14.3.1",
-
     "jtest": "0.0.1",
-    "mongoose": "^5.4.20",
+    "mongoose": "^5.4.15",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-fetch": "^2.3.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
     "jsonwebtoken": "^8.5.0",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.15",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0"
   },
-  "devDependencies": {
-    "jest": "^24.5.0",
-    "nodemon": "^1.18.10"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SE-GUC/Namla.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SE-GUC/Namla/issues"
+  },
+  "homepage": "https://github.com/SE-GUC/Namla#readme"
 }
