--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "create-react-app": "^2.1.8",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "joi": "^14.3.1",
@@ -24,8 +25,7 @@
     "mongoose": "^5.4.22",
     "multer": "^1.4.1",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "path": "^0.12.7"
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "jest": "^24.5.0",
