--- a/package.json
+++ b/package.json
@@ -1,61 +1,30 @@
 {
-  "name": "express-test",
+  "name": "namla",
   "version": "1.0.0",
-  "description": "",
+  "description": "nebny-guc",
   "main": "index.js",
+  "directories": {
+    "test": "tests"
+  },
   "scripts": {
-    "start": "node index.js",
-    "test": "jest --runInBand",
-    "testWatch": "jest --runInBand --watchAll"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/jest": "^24.0.11",
-    "axios": "^0.18.0",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "joi": "^14.3.1",
-    "jsonwebtoken": "^8.5.0",
-    "moment": "^2.24.0",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
-  },
-  "devDependencies": {
-    "jest": "^24.5.0",
-    "nodemon": "^1.18.10"
-  },
-  "standard": {
-    "env": [
-      "jest"
-    ]
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "verbose": true,
-    "collectCoverage": true,
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "jest": "^24.5.0",
-    "joi": "^14.3.1",
-    "jtest": "0.0.1",
-    "mongoose": "^5.4.15",
-    "morgan": "^1.9.1",
-    "multer": "^1.4.1",
-    "node-fetch": "^2.3.0",
-    "uuid": "^3.3.2",
-    "jsonwebtoken": "^8.5.0",
-    "moment": "^2.24.0",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "test": "test"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SE-GUC/Namla.git"
   },
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/SE-GUC/Namla/issues"
   },
-  "homepage": "https://github.com/SE-GUC/Namla#readme"
+  "homepage": "https://github.com/SE-GUC/Namla#readme",
+  "dependencies": {
+    "bcrypt": "^3.0.5",
+    "bcryptjs": "^2.4.3",
+    "busboy-body-parser": "^0.3.2",
+    "cors": "^2.8.5",
+    "joi": "^14.3.1",
+    "uuid": "^3.3.2"
+  }
 }
