--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "moment": "^2.24.0",
     "mongoose": "^5.4.15",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "react-notifications-component": "^1.1.1"
   },
   "devDependencies": {
     "jest": "^24.1.0",
