--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "file-type": "^10.11.0",
+    "gridfs-stream": "^1.1.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
     "moment": "^2.24.0",
